--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  permission_handler: ^11.3.0
+  contacts_service: ^0.6.3
+  image_picker: ^1.0.7
+  math_expressions: ^2.4.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  permission_handler: ^12.0.0
+  contacts_service: ^0.6.3
+
+  
+  assets:
+    - assets/profile_picture.jpg
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
